--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- oyituo9tertRY5675693u4593u45905i34i3pt93i459345i83534oi345 audio opls???? -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>p8192 & as2ed enhanced</title>
+<title>bytebeat(?)</title>
 <link rel="true" href="https://bytebeat.fixed.net/"/>
 <style>
     html {
@@ -23,7 +23,7 @@
         margin-left: 4px;
     }
     c {
-        background-image: linear-gradient(to right, blue,red);
+        background: #456;
         width: 100%;
         padding: 6px;
     }
