--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
 <big>version 0.8</big><br>
 add time variable (t), the br() reversed the bits,<br><r>note: the player new is <a href="https://p8192-asd2ed-player.on.websim.com/?v=1" target="_blank">here</a>.</r><br>
 <textarea id="formula" spellcheck="false">
-a=t>>7,b=t,c=t>>(t>>15),d=(t>>4),e=4e5/(t&4095)*(1&-t>>11),10*(a|b|c)+(d)|e
-
-// clom 11025hz and javascript code
-// by: p8192</textarea>
+10*(t>>4|t>>8)|t>>7</textarea>
 <br><br>
 <c>
     <input type="ticks" value="75c | 0 | 0.00" style="width: 120px" readonly>
